<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName"
                android:text="@string/points"
                android:textColor="#0609A3" />

            <SeekBar
                android:id="@+id/points_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:min="0"
                android:progress="50"
                android:theme="@style/SeekBarTheme"/>

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName"
                android:text="@string/total_rebounds"
                android:textColor="#0609A3"
                android:background="@null"/>

            <SeekBar
                android:id="@+id/rebounds_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="100"
                android:progress="50"
                android:theme="@style/SeekBarTheme" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName"
                android:text="@string/assists"
                android:textColor="#0609A3"
                android:background="@null"/>

            <SeekBar
                android:id="@+id/assists_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="100"
                android:progress="50"
                android:theme="@style/SeekBarTheme"/>

            <EditText
                android:id="@+id/editTextTextPersonName6"
                android:layout_width="66dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName"
                android:text="@string/blocks"
                android:textColor="#0609A3"
                android:background="@null"/>

            <SeekBar
                android:id="@+id/blocks_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="100"
                android:progress="50"
                android:theme="@style/SeekBarTheme"/>

            <EditText
                android:id="@+id/editTextTextPersonName7"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName"
                android:text="@string/total_percentage"
                android:textColor="#0609A3"
                android:background="@null"/>

            <SeekBar
                android:id="@+id/percentage_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="100"
                android:progress="50"
                android:theme="@style/SeekBarTheme"/>

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName"
                android:text="@string/free_throw_percentage"
                android:textColor="#0609A3" />

            <SeekBar
                android:id="@+id/two_pt_percentage_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="100"
                android:progress="50"
                android:theme="@style/SeekBarTheme"/>

            <EditText
                android:id="@+id/editTextTextPersonName9"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName"
                android:text="@string/three_pt_percentage"
                android:textColor="#0609A3"
                android:background="@null"/>

            <SeekBar
                android:id="@+id/three_point_pt_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="100"
                android:progress="50"
                android:theme="@style/SeekBarTheme"/>


            <EditText
                android:id="@+id/editTextTextPersonName11"
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="textPersonName"
                android:text="@string/turnovers"
                android:textColor="#0609A3"
                android:background="@null"/>

            <SeekBar
                android:id="@+id/turnovers_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="0"
                android:max="100"
                android:progress="50"
                android:theme="@style/SeekBarTheme"/>


        </LinearLayout>

    </ScrollView>


</androidx.drawerlayout.widget.DrawerLayout>